fix(website): fixed spelling

--- a/docs/_posts/2021-10-27-v130-is-out.md
+++ b/docs/_posts/2021-10-27-v130-is-out.md
@@ -6,7 +6,7 @@ layout: single
 toc: true
 ---
 
-Great news everyone! Version `v1.3.0` is now out, and ready! This new update brings about a lot of new features, including giveaways, trivia quizes, context menus and a whole lot more!
+Great news everyone! Version `v1.3.0` is now out, and ready! This new update brings about a lot of new features, including giveaways, trivia quizzes, context menus and a whole lot more!
 
 # Context Menus
 
@@ -14,7 +14,7 @@ Context Menus are here, with a test being rolled out to everyone in this update.
 
 <figure>
   <img src="https://i.imgur.com/Be25AdJ.png" alt="">
-  <figcaption>This is an example of a message context menu. This appears when right clicking messages, and can be used on Giveaways (currently) to either reroll them or stop the altogther. (You still need the Manage Message perms to do this though)</figcaption>
+  <figcaption>This is an example of a message context menu. This appears when right clicking messages, and can be used on Giveaways (currently) to either reroll them or stop the altogether. (You still need the Manage Message perms to do this though)</figcaption>
 </figure>
 
 <figure>
@@ -22,7 +22,7 @@ Context Menus are here, with a test being rolled out to everyone in this update.
   <figcaption>This is an example of a user context menu. This can be seen by right clicking a user.</figcaption>
 </figure>
 
-We think these context menus make it easier to interact with the bot, especially on mobile devices where typing may be not as efficent or accesible. We plan to add more context menu commands in the next update.
+We think these context menus make it easier to interact with the bot, especially on mobile devices where typing may be not as efficient or accessible. We plan to add more context menu commands in the next update.
 
 # Giveaways
 
