fix(website): fix broken links

--- a/docs/_posts/2021-12-3-v140-is-out.md
+++ b/docs/_posts/2021-12-3-v140-is-out.md
@@ -6,7 +6,7 @@ header:
   teaser: assets/images/Lemon Tools v1.4.0.png
 ---
 
-![Lemon Tools v1.4.0 Poster](/assets/images/Lemon Tools v1.4.0.png){: .align-center}
+![Lemon Tools v1.4.0 Poster](/assets/images/lemon-tools-v140.png){: .align-center}
 
 Version `v1.4.0` is now rolling out across Discord! Just in time for the holiday season, a new update with a ton of features has dropped! We will be covering the most significant features, fixes and additions in the article. See the [Changelog](/changelog) for the full details.
 
